--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
 @import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 /* Necesario para que la app ocupe toda la pantalla */
 html, body, #root {
